Fix playlist blurring
* Add observer for watch playlist to handle delays
* Add support for playlist page

--- a/src/content/style.css
+++ b/src/content/style.css
@@ -1,4 +1,4 @@
-.blur #thumbnail img {
+.blur :is(.thumbnail-wrapper, #thumbnail) img {
   filter: blur(15px);
   -webkit-filter: blur(15px);
   background-color: transparent;
